objects/mindtouch_sf__MindTouch_Article__c.object
<CustomObject>
    <description>Tracks a MindTouch Article in the corresponding MindTouch site.</description>
    <fields>
        <fullName>mindtouch_sf__PageId__c</fullName>
        <description>Page ID of the article on the MindTouch site.</description>
        <externalId>true</externalId>
        <label>Page ID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mindtouch_sf__Parent_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The case that created this article (if any).</description>
        <label>Parent_Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>MindTouch Articles</relationshipLabel>
        <relationshipName>MindTouch_Articles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mindtouch_sf__Title__c</fullName>
        <description>Title of MindTouch article (at time it was created inside of Salesforce).</description>
        <label>Title</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mindtouch_sf__URL__c</fullName>
        <description>URL to MindTouch Article.</description>
        <label>URL</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>MindTouch Article</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>MindTouch Article ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MindTouch Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>